# Medical-Appointment-Management

./: Cargo.toml  README.md  fns_calendario.sql  fns_citas.sql  fns_especialidades.sql  fns_examenes.sql  fns_historias.sql  fns_informes.sql  fns_medicamentos.sql  fns_medicos.sql  fns_pacientes.sql  fns_remisiones.sql  fns_resultados_exa.sql  fns_seguros.sql  secuencias_doctorya.sql  tablasdoctorya.sql
src/: main.rs
src/api/: router.rs
src/application/command/: auditoria.rs  citas.rs  especialidades.rs  examenes.rs  historias_clinicas.rs  informes.rs  medicamentos.rs  medicos.rs  mod.rs  paciente.rs  remisiones.rs  seguro_medico.rs
src/application/query/: auditoria.rs  calendario.rs  citas.rs  especialidades.rs  examenes.rs  historias_clinicas.rs  medicamentos.rs  medicos.rs  mod.rs  paciente.rs  seguro_medico.rs
src/infrastructure/data/: db.rs  db_mongo.rs  db_pg.rs  get_db.rs  mod.rs
src/macro/: json_get.rs  mod.rs
src/test/: test.rs
static/: index.html
static/components/: auditorias.html  examenes.html  historia-clinica.html  medicamentos.html  medicos.html  pacientes.html  seguros.html
