[package]
name = "doctorya"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
sqlx = {version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "chrono"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde", "clock"] }
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
rand = "0.8.5"
tokio = {version = "1.40.0", features = ["full"]}
tower-http = {version = "0.6.1", features = ["cors"]}
mongodb = "3.1.0"
bson = { version = "2", features = ["chrono-0_4"] }
futures = "0.3.31"
hyper = { version = "1.5.0", features = ["full"]}
reqwest = { version = "0.12.9", features = ["json"] }

[dev-dependencies]
tokio = {version = "1.40.0", features = ["full"]}
hyper = { version = "1.5.0", features = ["full"]}